--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page website</title>
+    <title>Social Media App | Landing Page</title>
+    <meta name="description" content="Modern Social Media App Landing Page">
+    <meta name="keywords" content="App Landing Page Social Media App Landing Page">
 
     <!-- swiper js cdn link  -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -20,12 +22,11 @@
 
 <body>
     <header>
-        <a href="#" class="logo"><img src="img/logo.png" alt="" width="100px"></a>
+        <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
 
         <div id="menu-bar" class="fas fa-bars"></div>
 
         <nav class="navbar">
-            <a href="#home">home</a>
             <a href="#feature">features</a>
             <a href="#about">about</a>
             <a href="#usage">usage</a>
