Form Validation done

--- a/index.html
+++ b/index.html
@@ -251,25 +251,24 @@
 
     <section class="contact" id="contact">
         <h1 class="heading">get in touch</h1>
-        <form action="">
+        <form action="https://formspree.io/f/xgvvpyjz" method="POST">
             <div class="inputBox">
-                <input type="text" required>
+                <input type="text" name="fullname" required>
                 <label>name</label>
             </div>
             <div class="inputBox">
-                <input type="email" required>
+                <input type="email" name="email" required>
                 <label>email</label>
             </div>
             <div class="inputBox">
-                <input type="number" required>
+                <input type="tel" name="mobile_no" required>
                 <label>number</label>
             </div>
             <div class="inputBox">
-                <textarea required name="" id="" cols="30" rows="10"></textarea>
+                <textarea required name="message" id="" cols="30" rows="10"></textarea>
                 <label>message</label>
             </div>
-
-            <input type="submit" class="btn" value="send message">
+            <button type="submit" class="btn">Send</button>
         </form>
     </section>
 
@@ -282,7 +281,7 @@
             <a href="#" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-linkedin"></a>
         </div>
-        <h1 class="credit"> created by <span> krishna636471@gmail.com </span> | all rights reserved! </h1>
+        <h1 class="credit"> created by <a href="mailto:krishna636471@gmail.com"> krishna636471@gmail.com </a> | all rights reserved! </h1>
     </section>
 
 
