--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 </head>
 
 <body>
+
     <header>
-        <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+        <a href="#" class="logo">
+            <img src="img/logo.png" alt="">
+            <!-- <h2>Social App</h2> -->
+        </a>
 
         <div id="menu-bar" class="fas fa-bars"></div>
 
