--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media App | Landing Page</title>
-    <meta name="description" content="Modern Social Media App Landing Page">
-    <meta name="keywords" content="App Landing Page Social Media App Landing Page">
+    <title>Your Social Hub: Connect, Share, and Discover</title>
+    <meta name="description" content="Dive into a world of connection with [App Name]. Share your passions, explore trending topics, and discover a community that shares your interests.">
+    <meta name="keywords" content="social media, community, connection, sharing, discovery, trends, passions">
 
     <!-- swiper js cdn link  -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
